--- a/roles/tools-utils/tasks/main.yml
+++ b/roles/tools-utils/tasks/main.yml
@@ -1,23 +1,8 @@
 ---
-- name: install epel GPG key
-  become: yes
-  rpm_key:
-    key: "https://dl.fedoraproject.org/pub/epel/RPM-GPG-KEY-EPEL-{{ ansible_distribution_major_version }}"
+- name: module-centos
+  include_tasks: module-centos.yml
+  when: _centos7 or _centos8
 
-- name: install epel-release
-  become: yes
-  yum:
-    name:
-      - "https://dl.fedoraproject.org/pub/epel/epel-release-latest-{{ ansible_distribution_major_version }}.noarch.rpm"
-
-- name: install modules
-  become: yes
-  yum:
-    name:
-      - yum-utils
-      - vim
-      - wget
-      - tar
-      - unzip
-      - bzip2
-      - jq
+- name: module-ubuntu
+  include_tasks: module-ubuntu.yml
+  when: _ubuntu20
