--- a/roles/dev-sqlite3/tasks/main.yml
+++ b/roles/dev-sqlite3/tasks/main.yml
@@ -1,12 +1,12 @@
 ---
 - name: sqlite3-centos7
-  include_tasks: sqlite3-centos7-main.yml
-  when:
-    - ansible_os_family == 'RedHat'
-    - ansible_distribution_major_version == '7'
+  include_tasks: sqlite3-centos7.yml
+  when: _centos7
 
 - name: sqlite3-centos8
-  include_tasks: sqlite3-centos8-main.yml
-  when:
-    - ansible_os_family == 'RedHat'
-    - ansible_distribution_major_version == '8'
+  include_tasks: sqlite3-centos8.yml
+  when: _centos8
+
+- name: sqlite3-ubuntu
+  include_tasks: sqlite3-ubuntu.yml
+  when: _ubuntu20
