--- a/roles/tools-develop/tasks/main.yml
+++ b/roles/tools-develop/tasks/main.yml
@@ -1,18 +1,24 @@
 ---
-- name: yum-install
-  include_tasks: yum-install.yml
+- name: module-centos
+  include_tasks: module-centos.yml
+  when: _centos7 or _centos8
 
 - name: git-centos7
-  include_tasks: git-centos7-main.yml
-  when:
-    - ansible_os_family == 'RedHat'
-    - ansible_distribution_major_version == '7'
+  include_tasks: git-centos7.yml
+  when: _centos7
 
 - name: git-centos8
-  include_tasks: git-centos8-main.yml
-  when:
-    - ansible_os_family == 'RedHat'
-    - ansible_distribution_major_version == '8'
+  include_tasks: git-centos8.yml
+  when: _centos8
 
-- name: ldconfig
-  include_tasks: ldconfig.yml
+- name: ldconfig-centos
+  include_tasks: ldconfig-centos.yml
+  when: _centos7 or _centos8
+
+- name: module-ubuntu
+  include_tasks: module-ubuntu.yml
+  when: _ubuntu20
+
+- name: git-ubuntu
+  include_tasks: git-ubuntu.yml
+  when: _ubuntu20
