--- a/roles/user-env/tasks/bash-centos.yml
+++ b/roles/user-env/tasks/bash-centos.yml
@@ -29,5 +29,6 @@
       alias ll='ls -alF'
       alias la='ls -a'
       alias ..='cd ..'
+      alias crontab='crontab -i'
     marker: "# {mark} ANSIBLE MANAGED BLOCK aliases"
     mode: 0600
